# nogfi-hackathon-1

./: .gitignore  README.md  envrc_sample  interface.json  pyproject.toml  requirements.txt
src/nogfi_hackathon/: __init__.py  __main__.py
src/nogfi_hackathon/competition/: competition.md  random_config_changes.py
src/nogfi_hackathon/competition/example_script/: competition_script_example.py  dell_sonic_ssh_show_interface_status.textfsm
src/nogfi_hackathon/competition/stories/: aliens.txt  bornamerican.txt  cobra.txt  commando.txt  diehard2.txt  madmax2.txt  predator.txt  robocop.txt  rocky.txt  runningman.txt  stories_to_dict.py  totalrecall.txt
src/nogfi_hackathon/competition/totalrecall/: if_sleuth.py  interfaces.txt  run.sh  scalpel.py  story.txt  test-get.py  test-set.py
src/nogfi_hackathon/examples/: jinja2_1.py  napalm_1.py  netmiko_1.py  netmiko_2.py  netmiko_3.py  netutils_1.py  nornir_1.py  pygnmi_1.py  pygnmi_2.py  pygnmi_3.py  pygnmi_4.py  pygnmi_5.py  pygnmi_6.py  restconf_1.py  restconf_2.py  scrapli_1.py  scrapli_2.py  scrapli_3.py  settings.py  textfsm_example_1.textfsm
src/nogfi_hackathon/examples/ansible-example/: cli_example.yaml  custom_module.yaml  httpapi_example.yaml  inventory.ini
src/nogfi_hackathon/examples/configs/: generated_interface_config.txt
src/nogfi_hackathon/examples/files/: sonic-ascii.txt  sonic-logo.txt
src/nogfi_hackathon/examples/inventory/: hosts.yaml
src/nogfi_hackathon/fakenos/: inventory_100_ios.yaml  inventory_napalm.yaml  inventory_small.yaml
src/nogfi_hackathon/tasks/: tasks.md
(+2 files in other folders)
